--- a/web/src/components/About/styles.module.css
+++ b/web/src/components/About/styles.module.css
@@ -1,3 +1,5 @@
+@import "../../boot.css";
+
 section.about{
     width: 100%;
     height: 100%;
@@ -6,12 +8,12 @@ section.about{
 .header{
     width: 100%;
     padding: 20px 0;
-    background-color: #00141D;
+    background-color: var(--dark-blue);
     text-align: center;
 }
 
 .header h1{
-    color: #fff;
+    color: var(--white);
     font-weight: normal;
     font-size: 30px;
 }
@@ -45,7 +47,7 @@ main{
 .left h1{
     font-size: 45px;
     font-weight: normal;
-    color: #00141D;
+    color: var(--dark-blue);
     margin-bottom: 20px;
 }
 
