--- a/web/src/components/Header/styles.module.css
+++ b/web/src/components/Header/styles.module.css
@@ -1,8 +1,10 @@
+@import "../../boot.css";
+
 header{
     width: 100%;
     padding: 10px 0;
-    background-color: #00121B;
-    color: white;
+    background-color: var(--dark-blue);
+    color: var(--white);
 }
 
 header .container{
@@ -17,7 +19,7 @@ header h1{
 }
 
 header nav a{
-    color: white;
+    color: var(--white);
     text-decoration: none;
     margin-right: 10px;
 }
