--- a/web/src/components/cta/styles.module.css
+++ b/web/src/components/cta/styles.module.css
@@ -1,3 +1,5 @@
+@import "../../boot.css";
+
 section.cta{
     width: 100%;
     height: 90vh;
@@ -15,7 +17,7 @@ section.cta{
 .overflow{
     width: 100%;
     height: 100%;
-    color: #fff;
+    color: var(--white);
     background-color: rgba(0,0,0,0.2);
     border-radius: 10px;
     display: flex;
@@ -42,7 +44,7 @@ section.cta{
 .box a{
     padding: 8px 20px;
     border-radius: 8px;
-    background-color: #00FEFD;
-    color: #00141D;
+    background-color: var(--light-blue);
+    color: var(--dark-blue);
     text-decoration: none;
 }
