--- a/web/src/views/Login/styles.module.css
+++ b/web/src/views/Login/styles.module.css
@@ -1,7 +1,9 @@
+@import "../../boot.css";
+
 .login_container {
 	width: 100%;
 	min-height: 100vh;
-	background-color: #f5f5f5;
+	background-color: var(--white);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -22,7 +24,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-color: white;
+	background-color: #e9e7e7;
 	border-top-left-radius: 10px;
 	border-bottom-left-radius: 10px;
 }
@@ -55,7 +57,7 @@
 	margin: 5px 0;
 	font-size: 14px;
 	background-color: #f34646;
-	color: white;
+	color: var(--white);
 	border-radius: 5px;
 	text-align: center;
 }
@@ -66,14 +68,14 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-color: #00121B;
+	background-color: var(--dark-blue);
 	border-top-right-radius: 10px;
 	border-bottom-right-radius: 10px;
 }
 
 .right h1 {
 	margin-top: 0;
-	color: white;
+	color: var(--white);
 	font-size: 40px;
 	align-self: center;
 }
@@ -83,7 +85,7 @@
 	border: none;
 	outline: none;
 	padding: 12px 0;
-	background-color: white;
+	background-color: var(--white);
 	border-radius: 20px;
 	width: 180px;
 	font-weight: bold;
@@ -92,7 +94,7 @@
 }
 
 .green_btn {
-	background-color: #00121B;
-	color: white;
+	background-color: var(--dark-blue);
+	color: var(--white);
 	margin: 10px;
 }
